# swagger/swagger.yml
@@ -140,13 +140,18 @@ paths:
             $ref: '#/definitions/controllers.HttpResponseCode'
         "403":
           description: taskid is empty
-  /task/settleup/{taskid}:
+  /task/confirm/{taskId}:
     get:
       tags:
       - task
-      description: 接受者完成任务的信息以及证明只有发布者和接受者自身才能看见
-      operationId: TaskController.接受者查询自己已完成任务的信息
+      description: 任务接受者将任务完成信息上传到服务器上，发布者查看所有接受者的信息以及其上传的任务完成信息
+      operationId: TaskController.发布者查询任务完成信息
       parameters:
+      - in: header
+        name: session
+        description: user's session ,get from login
+        required: true
+        type: string
       - in: path
         name: taskId
         description: 任务id
@@ -154,18 +159,19 @@ paths:
         type: integer
       responses:
         "200":
-          description: ""
-          schema:
-            $ref: '#/definitions/models.Task'
+          description: '{[object]} controllers.Task'
         "403":
-          description: taskid is empty
-  /task/task/accept/{taskId}:
+          description: '{object} controllers.HttpResponseCode'
     post:
       tags:
       - task
-      description: user accept the task
-      operationId: TaskController.接受任务
+      operationId: TaskController.发布者结算任务
       parameters:
+      - in: header
+        name: session
+        description: user's session ,get from login
+        required: true
+        type: string
       - in: path
         name: taskId
         description: 任务id
@@ -177,7 +183,84 @@ paths:
           schema:
             $ref: '#/definitions/controllers.HttpResponseCode'
         "403":
-          description: taskid is empty
+          description: '{object} controllers.HttpResponseCode'
+  /task/settleup/{taskId}:
+    post:
+      tags:
+      - task
+      operationId: TaskController.任务接受者结算任务
+      parameters:
+      - in: header
+        name: session
+        description: user's session ,get from login
+        required: true
+        type: string
+      - in: path
+        name: taskId
+        description: 任务id
+        required: true
+        type: integer
+      - in: body
+        name: graph
+        description: 图片，使用myfile:xxx传输
+        required: true
+        schema:
+          $ref: '#/definitions/binary'
+      responses:
+        "200":
+          description: ""
+          schema:
+            $ref: '#/definitions/controllers.HttpResponseCode'
+        "403":
+          description: '{object} controllers.HttpResponseCode'
+  /task/settleup/{taskid}:
+    get:
+      tags:
+      - task
+      description: 接受者完成任务的信息以及证明只有发布者和接受者自身才能看见
+      operationId: TaskController.接受者查询自己已完成任务的信息
+      parameters:
+      - in: header
+        name: session
+        description: user's session ,get from login
+        required: true
+        type: string
+      - in: path
+        name: taskId
+        description: 任务id
+        required: true
+        type: integer
+      responses:
+        "200":
+          description: ""
+          schema:
+            $ref: '#/definitions/controllers.HttpResponseCode'
+        "403":
+          description: '{object} controllers.HttpResponseCode'
+  /task/task/accept/{taskId}:
+    post:
+      tags:
+      - task
+      description: user accept the task
+      operationId: TaskController.接受任务
+      parameters:
+      - in: header
+        name: session
+        description: user's session ,get from login
+        required: true
+        type: string
+      - in: path
+        name: taskId
+        description: 任务id
+        required: true
+        type: integer
+      responses:
+        "200":
+          description: ""
+          schema:
+            $ref: '#/definitions/controllers.HttpResponseCode'
+        "403":
+          description: '{object} controllers.HttpResponseCode'
   /user/:
     get:
       tags:
@@ -222,6 +305,23 @@ paths:
             $ref: '#/definitions/controllers.HttpResponseCode'
         "403":
           description: :uid is not int
+  /user/download:
+    get:
+      tags:
+      - user
+      description: Use session to get user's id
+      operationId: UserController.login
+      parameters:
+      - in: query
+        name: code
+        description: wx.Login response code
+        required: true
+        type: string
+      responses:
+        "200":
+          description: '{string} login success'
+        "403":
+          description: user not exist
   /user/login:
     get:
       tags:
@@ -256,7 +356,27 @@ paths:
           description: '{string} login success'
         "403":
           description: user not exist
+  /user/queryImage:
+    post:
+      tags:
+      - user
+      description: Use session to get user's id
+      operationId: UserController.login
+      parameters:
+      - in: query
+        name: code
+        description: wx.Login response code
+        required: true
+        type: string
+      responses:
+        "200":
+          description: '{string} login success'
+        "403":
+          description: user not exist
 definitions:
+  binary:
+    title: binary
+    type: object
   controllers.CreateTaskReturnCode:
     title: CreateTaskReturnCode
     type: object
@@ -289,10 +409,25 @@ definitions:
         $ref: '#/definitions/models.Task'
       User:
         $ref: '#/definitions/models.User'
+  models.ConfirmImage:
+    title: ConfirmImage
+    type: object
+    properties:
+      Id:
+        type: integer
+        format: int64
+      ImagePath:
+        type: string
+      ReleaseRelation:
+        $ref: '#/definitions/models.ReleaseRelation'
   models.ReleaseRelation:
     title: ReleaseRelation
     type: object
     properties:
+      ConfirmImages:
+        type: array
+        items:
+          $ref: '#/definitions/models.ConfirmImage'
       Id:
         type: integer
         format: int64
@@ -360,6 +495,8 @@ definitions:
         type: array
         items:
           $ref: '#/definitions/models.AcceptRelation'
+      Image:
+        type: string
       ReleaseRelation:
         type: array
         items:
